--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,24 @@
 body {
   padding: 0;
   margin: 0;
+  background-color: slategray;
+  color: white;
 }
 
 #navbar {
   padding: 10px;
   border-right: 1px solid black;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+header,
+a:link,
+a:visited {
+  font-weight: bold;
+  font-size: larger;
+  text-decoration: none;
+  color: white;
 }
 
 @media (max-width: 800px) {
