--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,27 @@ body {
   margin: 0;
   background-color: slategray;
   color: white;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 #navbar {
-  padding: 10px;
-  border-right: 1px solid black;
-  display: grid;
-  grid-template-columns: 1fr;
+  border-right: 2px solid rgb(82, 82, 82);
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+#navbar > a,
+#navbar > header {
+  border-bottom: 2px solid rgb(82, 82, 82);
+  padding: 8px;
+}
+
+#main-doc {
+  padding: 15px;
+  overflow-y: auto;
 }
 
 header,
